--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <title>Zootopia</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
-  <body>
+  <body class="movie">
     <h1>Zootopia</h1>
 
     <img
       src=" https://vignette.wikia.nocookie.net/zootopia/images/4/45/Judy_Standing_Render.png/revision/latest/scale-to-width-down/350?cb=20160419140356"
+      clas="rabbit"
     />
 
     <iframe
+      class="rabbit"
       width="560"
       height="315"
       src="https://www.youtube.com/embed/kfJHLMKXiyY"
@@ -24,7 +26,7 @@
 
     <h2>Judy Hopps</h2>
     <div class="Judy">
-      <p>
+      <p class="block">
         Judy Hopps is a bunny and the main character in Disney 2016 film
         Zootopia. She is a rabbit living in BunnyBurrow on her family carrot
         farm. She dreams of being a police officer, in the big city of Zootopia,
