more css changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
     <img
       src=" https://vignette.wikia.nocookie.net/zootopia/images/4/45/Judy_Standing_Render.png/revision/latest/scale-to-width-down/350?cb=20160419140356"
-      clas="rabbit"
     />
 
     <iframe
@@ -47,8 +46,18 @@
         while learning alot about herself and the reality of life.
       </p>
 
-      <div id="quote">
-        <p>
+      <div class="qoute">
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/3dSIPI47X3E"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        >
+        </iframe>
+
+        <p class="quote">
           “When I was a kid, I thought <span class="zoo"> Zootopia</span> was
           this perfect place where everyone got along and anyone could be
           anything. Turns out, real life's a little bit more complicated than a
@@ -61,16 +70,6 @@
           better place. Look inside yourself and recognize that change starts
           with you. It starts with me. It starts with all of us.”
         </p>
-
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/3dSIPI47X3E"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        >
-        </iframe>
       </div>
     </div>
   </body>
