--- a/index.html
+++ b/index.html
@@ -7,25 +7,23 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body class="movie">
-    <h1>Zootopia</h1>
+    <!-- <h1>Zootopia</h1> -->
 
+
+<div class = "Container"> 
+  <div class = "row rabbit">
+    <div class = "col-sm-6"> 
     <img
       src=" https://vignette.wikia.nocookie.net/zootopia/images/4/45/Judy_Standing_Render.png/revision/latest/scale-to-width-down/350?cb=20160419140356"
     />
+  </div> 
 
-    <iframe
-      class="rabbit"
-      width="560"
-      height="315"
-      src="https://www.youtube.com/embed/kfJHLMKXiyY"
-      frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-      allowfullscreen
-    ></iframe>
+<!-- 
+    <h2>Judy Hopps</h2> -->
 
-    <h2>Judy Hopps</h2>
-    <div class="Judy">
-      <p class="block">
+
+    <div class = "col-sm-6"> 
+      <p>
         Judy Hopps is a bunny and the main character in Disney 2016 film
         Zootopia. She is a rabbit living in BunnyBurrow on her family carrot
         farm. She dreams of being a police officer, in the big city of Zootopia,
@@ -45,9 +43,32 @@
         are some set backs along the way, but in the end she imerges victorious
         while learning alot about herself and the reality of life.
       </p>
+      <iframe
+      class = "police"
+      width="560"
+      height="315"
+      src="https://www.youtube.com/embed/kfJHLMKXiyY"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen
+     ></iframe> 
 
-      <div class="qoute">
+
+    </div>
+ </div> 
+
+
+
+
+
+
+
+ <br />
+  <br /> 
+
+      <div class= "row qoute">
         <iframe
+          class= "fox"
           width="560"
           height="315"
           src="https://www.youtube.com/embed/3dSIPI47X3E"
@@ -58,7 +79,7 @@
         </iframe>
 
         <p class="quote">
-          “When I was a kid, I thought <span class="zoo"> Zootopia</span> was
+          “When I was a kid, I thought <span  style = font:bold> Zootopia</span> was
           this perfect place where everyone got along and anyone could be
           anything. Turns out, real life's a little bit more complicated than a
           slogan on a bumper sticker. Real life is messy. We all have
@@ -70,7 +91,13 @@
           better place. Look inside yourself and recognize that change starts
           with you. It starts with me. It starts with all of us.”
         </p>
+        </div>
       </div>
     </div>
+  </div> 
   </body>
 </html>
+
+
+
+  
