--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h2>Judy Hopps</h2> -->
 
 
-    <div class = "col-sm-6"> 
+    <div class = "col-sm-6 carrot"> 
       <p>
         Judy Hopps is a bunny and the main character in Disney 2016 film
         Zootopia. She is a rabbit living in BunnyBurrow on her family carrot
@@ -43,7 +43,7 @@
         are some set backs along the way, but in the end she imerges victorious
         while learning alot about herself and the reality of life.
       </p>
-      <iframe
+      <!-- <iframe
       class = "police"
       width="560"
       height="315"
@@ -51,7 +51,7 @@
       frameborder="0"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen
-     ></iframe> 
+     ></iframe>  -->
 
 
     </div>
