Bunny image is layered

--- a/index.html
+++ b/index.html
@@ -9,64 +9,56 @@
   <body class="movie">
     <!-- <h1>Zootopia</h1> -->
 
+    <div class="Container">
+      <div class="row rabbit">
+        <div class="col-sm-6 Judy">
+          <img
+            src=" https://vignette.wikia.nocookie.net/zootopia/images/4/45/Judy_Standing_Render.png/revision/latest/scale-to-width-down/350?cb=20160419140356"
+          />
+        </div>
 
-<div class = "Container"> 
-  <div class = "row rabbit">
-    <div class = "col-sm-6"> 
-    <img
-      src=" https://vignette.wikia.nocookie.net/zootopia/images/4/45/Judy_Standing_Render.png/revision/latest/scale-to-width-down/350?cb=20160419140356"
-    />
-  </div> 
-
-<!-- 
+        <!-- 
     <h2>Judy Hopps</h2> -->
 
+        <div class="col-sm-6 carrot">
+          <p>
+            Judy Hopps is a bunny and the main character in Disney 2016 film
+            Zootopia. She is a rabbit living in BunnyBurrow on her family carrot
+            farm. She dreams of being a police officer, in the big city of
+            Zootopia, even though there never been a bunny cop before. Alot of
+            others animals try to crush her dreams, but Judy is fiercly
+            determinated. I think Judy is a wonderful example of how anyone
+            human or animal can reach there dreams if they never give up.
+          </p>
 
-    <div class = "col-sm-6 carrot"> 
-      <p>
-        Judy Hopps is a bunny and the main character in Disney 2016 film
-        Zootopia. She is a rabbit living in BunnyBurrow on her family carrot
-        farm. She dreams of being a police officer, in the big city of Zootopia,
-        even though there never been a bunny cop before. Alot of others animals
-        try to crush her dreams, but Judy is fiercly determinated. I think Judy
-        is a wonderful example of how anyone human or animal can reach there
-        dreams if they never give up.
-      </p>
+          <p>
+            The story continues with Judy joining the police force, but
+            initially not being accepted by her boss or fellow officers. when
+            Mrs. Otterton comes to the station, destraught over the dispearance
+            of her husband Emmmit Otterton. Judy offers to take the case,
+            staking her career on it. Following her only lead Judy hustles a fox
+            named Nick into helping her and the two form an unexpected
+            friendship while working together. There are some set backs along
+            the way, but in the end she imerges victorious while learning alot
+            about herself and the reality of life.
+          </p>
+        </div>
+      </div>
 
-      <p>
-        The story continues with Judy joining the police force, but initially
-        not being accepted by her boss or fellow officers. when Mrs. Otterton
-        comes to the station, destraught over the dispearance of her husband
-        Emmmit Otterton. Judy offers to take the case, staking her career on it.
-        Following her only lead Judy hustles a fox named Nick into helping her
-        and the two form an unexpected friendship while working together. There
-        are some set backs along the way, but in the end she imerges victorious
-        while learning alot about herself and the reality of life.
-      </p>
-      <!-- <iframe
-      class = "police"
-      width="560"
-      height="315"
-      src="https://www.youtube.com/embed/kfJHLMKXiyY"
-      frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-      allowfullscreen
-     ></iframe>  -->
+       <iframe
+ class = "police"
+ width="560"
+ height="315"
+ src="https://www.youtube.com/embed/kfJHLMKXiyY"
+ frameborder="0"
+ allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+ allowfullscreen
+></iframe>  
 
-
-    </div>
- </div> 
-
-
-
-
-
-
-
- <br />
-  <br /> 
-
-      <div class= "row qoute">
+      <br />
+      <br />
+      
+      <div class= "row">
         <iframe
           class= "fox"
           width="560"
@@ -93,11 +85,7 @@
         </p>
         </div>
       </div>
+    </div> 
     </div>
-  </div> 
   </body>
 </html>
-
-
-
-  
